--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ authors = ["Oliver Schneider <git-spam-no-reply9815368754983@oli-obk.de>", "The 
 
 [features]
 default = []
-no_std = []
+std = []
 unstable = []
