--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "io"
 version = "0.1.0"
 authors = ["Oliver Schneider <git-spam-no-reply9815368754983@oli-obk.de>", "The Rust Project Developers"]
+license = "MIT/Apache-2.0"
 
 [dependencies]
 
